--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jesus Camilo</title>
-    <link rel="shortcut icon" href="icons/icono1.jpg" type="image/x-icon">
+    <title>Perfil Profesional</title>
+    <link rel="shortcut icon" href="icons/icono de perfil.jpg" type="image/x-icon">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
@@ -14,11 +14,8 @@
             <div class="nav_logo">
                 <h2 class="nav_title">Jesus Camilo</h2>
             </div>
-            <!-- ul.nav_link.nav_link_menu>(li.nav_items>a.nav_links{Texto})*4 -->
             <ul class="nav_link nav_link_menu">
-                <!-- <li class="nav_items">
-                    <a href="#" class="nav_links">Inicio</a>
-                </li> -->
+                </li> 
                 <li class="nav_items">
                     <a href="#about" class="nav_links">Acerca de</a>
                 </li>
@@ -42,7 +39,7 @@
         </nav>
         <section class="person_container container">
             <h1 class="person_title">Jesus Camilo Criado Ropero</h1>
-            <p class="person_paragraph">#CoachProfesional</p>
+            <p class="person_paragraph">#EstudianteSistemas</p>
             <a href="#" class="btn">Haz Click</a>
         </section>
     </header>
@@ -256,7 +253,7 @@
         </section>
         <section class="footer_copy container">
             <div class="footer_social">
-                <a href="#" class="footer_icon"><img src="icons/facebook.svg" alt="Icon Facebook" class="footer_img"></a>
+                <a href="https://www.facebook.com/profile.php?id=100009711631069" class="footer_icon"><img src="icons/facebook.svg" alt="Icon Facebook" class="footer_img"></a>
                 <a href="#" class="footer_icon"><img src="icons/instagram.svg" alt="Icon Instagram" class="footer_img"></a>
                 <a href="#" class="footer_icon"><img src="icons/twitter.svg" alt="Icon Twitter" class="footer_img"></a>
             </div>
